{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 253,
  "lineage": "5b773482-d08e-9465-7302-ff69ef22ecd0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.10.1.50",
            "association_id": "eipassoc-0729a63ba5f94515e",
            "domain": "vpc",
            "id": "eipalloc-04ffb9e87970832b0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-068a0d9addef2b8d4",
            "private_dns": "ip-10-10-1-50.ec2.internal",
            "private_ip": "10.10.1.50",
            "public_dns": "ec2-54-225-213-164.compute-1.amazonaws.com",
            "public_ip": "54.225.213.164",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow_web",
            "aws_subnet.subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0885b1f6bd170450c",
            "arn": "arn:aws:ec2:us-east-1:362910752666:instance/i-0100ec9b61665f6f6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0100ec9b61665f6f6",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MaisA",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-068a0d9addef2b8d4"
              }
            ],
            "primary_network_interface_id": "eni-068a0d9addef2b8d4",
            "private_dns": "ip-10-10-1-50.ec2.internal",
            "private_ip": "10.10.1.50",
            "public_ip": "54.225.213.164",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-09a5e53e74d41f163",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04112740d53d924c9",
            "tags": {
              "Name": "web-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0331ebfbca5d5aaab"
            ]
          },
          "dependencies": [
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow_web",
            "aws_subnet.subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:362910752666:internet-gateway/igw-0f0af0586001b2e25",
            "id": "igw-0f0af0586001b2e25",
            "owner_id": "362910752666",
            "vpc_id": "vpc-0bac040133a9592df"
          },
          "dependencies": [
            "aws_vpc.fursa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:362910752666:loadbalancer/app/ALB/2c3b4c54fd8acf0b",
            "arn_suffix": "app/ALB/2c3b4c54fd8acf0b",
            "dns_name": "ALB-1646482229.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:362910752666:loadbalancer/app/ALB/2c3b4c54fd8acf0b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ALB",
            "security_groups": [
              "sg-0331ebfbca5d5aaab"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04112740d53d924c9"
              },
              {
                "subnet_id": "subnet-0c4ae80c53ef466a0"
              }
            ],
            "subnets": [
              "subnet-04112740d53d924c9",
              "subnet-0c4ae80c53ef466a0"
            ],
            "tags": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0bac040133a9592df",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tgTest",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:362910752666:targetgroup/ATG/ba663e0c7f2d059b",
            "arn_suffix": "targetgroup/ATG/ba663e0c7f2d059b",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:362910752666:targetgroup/ATG/ba663e0c7f2d059b",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ATG",
            "port": 5000,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0bac040133a9592df"
          },
          "dependencies": [
            "aws_vpc.fursa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ATtest",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:362910752666:targetgroup/ATG/ba663e0c7f2d059b-20201214084712911600000001",
            "port": 5000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:362910752666:targetgroup/ATG/ba663e0c7f2d059b",
            "target_id": "i-0100ec9b61665f6f6"
          },
          "dependencies": [
            "aws_instance.web-server-instance",
            "aws_lb_target_group.tgTest",
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow_web",
            "aws_subnet.subnet1",
            "aws_vpc.fursa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-server-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-068a0d9addef2b8d4",
            "ipv6_address_count": 0,
            "mac_address": "0a:5e:b4:6e:20:37",
            "private_ip": "10.10.1.50",
            "private_ips": [
              "10.10.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0331ebfbca5d5aaab"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04112740d53d924c9"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "fursa-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07e1d73da4c100bcc",
            "owner_id": "362910752666",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f0af0586001b2e25",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f0af0586001b2e25",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fursa"
            },
            "vpc_id": "vpc-0bac040133a9592df"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.fursa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d346550951b81ac",
            "route_table_id": "rtb-07e1d73da4c100bcc",
            "subnet_id": "subnet-04112740d53d924c9"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.fursa-route-table",
            "aws_subnet.subnet1",
            "aws_vpc.fursa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:362910752666:security-group/sg-0331ebfbca5d5aaab",
            "description": "Allow Web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0331ebfbca5d5aaab",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "docker",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "362910752666",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bac040133a9592df"
          },
          "dependencies": [
            "aws_vpc.fursa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:362910752666:subnet/subnet-04112740d53d924c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-04112740d53d924c9",
            "map_public_ip_on_launch": false,
            "owner_id": "362910752666",
            "tags": {
              "Name": "subnet1"
            },
            "vpc_id": "vpc-0bac040133a9592df"
          },
          "dependencies": [
            "aws_vpc.fursa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:362910752666:subnet/subnet-0c4ae80c53ef466a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.2.0/24",
            "id": "subnet-0c4ae80c53ef466a0",
            "map_public_ip_on_launch": false,
            "owner_id": "362910752666",
            "tags": {
              "Name": "subnet1"
            },
            "vpc_id": "vpc-0bac040133a9592df"
          },
          "dependencies": [
            "aws_vpc.fursa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "fursa",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:362910752666:vpc/vpc-0bac040133a9592df",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-05ceabc053d5fcea8",
            "default_route_table_id": "rtb-052d944c512031cea",
            "default_security_group_id": "sg-0194c6d11ce7c3be1",
            "dhcp_options_id": "dopt-93522de9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0bac040133a9592df",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-052d944c512031cea",
            "owner_id": "362910752666"
          }
        }
      ]
    }
  ]
}